# drone

./: CMakeLists.txt  README.md  README_classic.md  README_harmonic.md  package.xml
STLs/: hexagonal_prism_height_1_outer_diameter_1.stl
config/: default.world  hexa_param.param
launch/: gazebo_classic_sim.launch.py  gazebo_harmonic_sim.launch.py  sim.launch.py
meshes/: M16.stl
models/copterPIX/: ardupilot_plugin.xacro  hexagonal_prism_height_1_outer_diameter_1.stl  old_robot.urdf.xacro  robot.urdf.xacro
models/iris/: ardupilot_plugin.xacro  robot.urdf.xacro
models/simple_box/: robot.urdf.xacro
resources/src/: apply_force_node.cpp  apply_force_node.py
resources/test for applying force/: apply_wrench.py  get_joint_state.py  ros2_node_to_monitor_and_apply_force.py
src/: ApplyForcePlugin.cpp  apply_force_node.cpp  apply_force_node.py
test for applying force/: Define_robot_model_in_xacro.xacro  apply_wrench.py  launch_file.py
worlds/: default.world
xacros/: ardupilot_plugin.xacro  arm_macro.xacro  arms.xacro  drone_maker.xacro  inertial_macros.xacro  link_macros.xacro  macro.xacro
