<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone</name>
  <version>0.0.0</version>
  <description>The drone package for simulating UAVs with ArduPilot and Gazebo.</description>
  <maintainer email="takahashiyoni@gmail.com">yoni</maintainer>
  <license>Apache-2.0</license> <!-- Changed to a common open-source license -->
  <!-- <license>TODO: License declaration</license>  -->
  
  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- Build dependencies -->
  <!-- <depend>gazebo_ros</depend> -->
  <!-- <depend>xacro</depend> -->
  <depend>rclcpp</depend>
  <!-- <depend>geometry_msgs</depend> -->
  <depend>gazebo_msgs</depend>
  <!-- comment if causes problems -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
